--- a/src/views/main/calendar/month/content/week_day_column/content/day/styles.css
+++ b/src/views/main/calendar/month/content/week_day_column/content/day/styles.css
@@ -34,7 +34,7 @@
   height: calc(100%-5px);
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
