--- a/src/views/main/notes/header/styles.css
+++ b/src/views/main/notes/header/styles.css
@@ -15,10 +15,13 @@
   margin-right: 15px;
 }
 
-.notes__header .MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"][class*="MuiOutlinedInput-marginDense"] {
+.notes__header
+  .MuiAutocomplete-inputRoot[class*='MuiOutlinedInput-root'][class*='MuiOutlinedInput-marginDense'] {
   padding: 6px 0px;
 }
 
-.notes__header .MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"][class*="MuiOutlinedInput-marginDense"] .MuiAutocomplete-input {
+.notes__header
+  .MuiAutocomplete-inputRoot[class*='MuiOutlinedInput-root'][class*='MuiOutlinedInput-marginDense']
+  .MuiAutocomplete-input {
   padding: 4.5px 0px;
 }
