--- a/src/views/main/notes/column_dialog/header/styles.css
+++ b/src/views/main/notes/column_dialog/header/styles.css
@@ -1,3 +1,12 @@
+.note__column_dialog__header.MuiCardHeader-root {
+  background-color: #b32e55;
+  color: white;
+}
+
+.note__column_dialog__header.MuiCardHeader-root .MuiTypography-h5 {
+  font-weight: bold;
+}
+
 .note__column_dialog__header.MuiCardHeader-root
   .MuiCardHeader-content
   .MuiTypography-root.MuiCardHeader-title {
