--- a/src/views/main/notes/content/column/styles.css
+++ b/src/views/main/notes/content/column/styles.css
@@ -15,8 +15,8 @@
   background-color: rgb(245, 245, 245);
   border-radius: 5px;
   padding: 10px 15px 10px 15px;
-  height: 95%;
-  max-height: 95%;
+  height: 90%;
+  max-height: 90%;
 }
 
 .note__note_content__column:first-of-type {
@@ -29,8 +29,9 @@
 }
 
 .note__note_content__column__draggable__droppable {
-  height: calc(100% - 40px - 27px);
-  max-height: calc(100% - 40px - 27px);
+  height: calc(100% - 40px - 27px - 8px);
+  max-height: calc(100% - 40px - 27px - 8px);
+  margin-bottom: 8px;
 }
 
 .note__note_content__column__draggable__droppable__scroll {
