--- a/src/views/main/notes/content/add_column/styles.css
+++ b/src/views/main/notes/content/add_column/styles.css
@@ -1,7 +1,7 @@
 .note__note_content__columns__add_column {
   padding-right: 14px;
   margin-left: 7px;
-  width: 70%;
+  width: 270px;
   flex: 0 0 auto;
 }
 
@@ -19,7 +19,13 @@
 }
 
 .note__note_content__columns__add_column__button__text {
-  font-size: 0.8rem;
-  margin-bottom: 0;
   line-height: initial;
+  font-size: small;
+  margin-bottom: 0;
+  font-weight: bold;
+  color: #b32e55;
+}
+
+.note__note_content__columns__add_column__button__text__max_columns {
+  color: red;
 }
