Feat(Background): Adição de background preto com opacidade quando o menu estiver aberto

--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -22,7 +22,7 @@
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: transparent;
+    background-color: rgba(0,0,0,0.3);
     border: none;
 }
 
