--- a/src/components/drawer_navigation/app_bar/sync_info/styles.css
+++ b/src/components/drawer_navigation/app_bar/sync_info/styles.css
@@ -6,7 +6,7 @@
 .drawer_menu__sync_info__cloud_icon {
   width: 40px;
   height: 40px;
-  fill: black;
+  fill: var(--header-and-menu-icons);
 }
 
 .drawer_menu__sync_info__icon {
@@ -14,7 +14,7 @@
   height: 15px;
   margin-left: -26.5px;
   margin-top: 6px;
-  fill: black;
+  fill: var(--header-and-menu-icons);
 }
 
 .drawer_menu__sync_info__icon.offline {
