--- a/src/components/logout_dialog/styles.css
+++ b/src/components/logout_dialog/styles.css
@@ -3,5 +3,5 @@
 }
 
 .MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
-  color: #36b344;
+  color: var(--column-font-color);
 }
