--- a/src/views/main/notes/column_dialog/header/styles.css
+++ b/src/views/main/notes/column_dialog/header/styles.css
@@ -1,5 +1,5 @@
 .note__column_dialog__header.MuiCardHeader-root {
-  background-color: #b32e55;
+  background-color: var(--header-and-menu);
   color: white;
 }
 
