--- a/src/views/main/notes/content/column/add_note/styles.css
+++ b/src/views/main/notes/content/column/add_note/styles.css
@@ -10,7 +10,7 @@
   font-size: small;
   margin-bottom: 0;
   font-weight: bold;
-  color: #b32e55;
+  color: var(--column-font-color);
 }
 
 .note__note_content__column__add_note__max_notes {
