--- a/src/views/main/notes/content/column/card/styles.css
+++ b/src/views/main/notes/content/column/card/styles.css
@@ -9,7 +9,7 @@
 }
 
 .note__note_content__column__column_card__card__card_content.MuiCardContent-root {
-  padding-top: 16px;
+  padding-top: 0px;
 }
 
 .note__note_content__column__column_card__card__card_content:last-child {
@@ -22,7 +22,7 @@
 
 .note__note_content__column__column_card .MuiCardHeader-root {
   padding: 16px;
-  padding-bottom: 0px;
+  padding-bottom: 12px;
 }
 
 .note__note_content__column__column_card
@@ -40,6 +40,7 @@
 
 .note__note_content__column__column_card.MuiPaper-rounded {
   border-radius: 3px;
+  background-color: var(--note-background);
 }
 
 .note__note_content__column__column_card__card__card_content__answer {
