Feat(Font): Escolha da fonte oficial

--- a/src/Var.css
+++ b/src/Var.css
@@ -12,7 +12,7 @@
   --selection-font-color: #000000;
   --column-font-color: #274035;
 
-  --font-base:'Varela Round', sans-serif;
+  --font-base:'Poppins', sans-serif;
   --font-secondary:'Poppins', sans-serif;
 }
 
