Feat(ArrowBack + color corrections)

--- a/src/Var.css
+++ b/src/Var.css
@@ -2,6 +2,7 @@
   --background-main: #F5F5F5;
   --header-and-menu: #694E73;
   --home-icons: #ADC2B9;
+  --add-button-background-color: #ADC2B9;
   --header-and-menu-icons: #F5F5F5;
   --column-and-selection-background: #ADC2B9;
   --note-background: #F5F5F5;
