--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -41,6 +41,7 @@
   background: var(--home-icons) url(../../../assets/icons/menu_icons/glossary.svg);
   display: grid;
   place-items: center;
+  background-size: cover;
 }
 
 .home .home__grid__paper__s {
@@ -49,6 +50,7 @@
   background: var(--home-icons) url(../../../assets/icons/menu_icons/settings.svg);
   display: grid;
   place-items: center;
+  background-size: cover;
 }
 
 .home .home__grid__paper__c {
@@ -57,7 +59,7 @@
   background: var(--home-icons) url(../../../assets/icons/menu_icons/phone.svg);
   display: grid;
   place-items: center;
-  font-size: large;
+  background-size: cover;
 }
 
 .home .home__grid__paper__f {
@@ -66,6 +68,8 @@
   background: var(--home-icons) url(../../../assets/icons/menu_icons/faq.svg);
   display: grid;
   place-items: center;
+  background-size: cover;
+
 }
 
 .home .home__grid__paper__n {
@@ -74,6 +78,7 @@
   background: var(--home-icons) url(../../../assets/icons/menu_icons/note.svg);
   display: grid;
   place-items: center;
+  background-size: cover;
 }
 
 .home .home__paper__string {
