--- a/src/App.css
+++ b/src/App.css
@@ -16,9 +16,12 @@
 }
 
 .app {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   font-family: var(--font-base);
-  width: 100vw;
-  height: 100vh;
   overflow: hidden;
   color: var(--base-font-color)
 }
