--- a/src/components/drawer_navigation/content/styles.css
+++ b/src/components/drawer_navigation/content/styles.css
@@ -1,6 +1,16 @@
 .drawer__navigation__content {
-    width: 100%;
-    height: calc(100% - 50px);
-    overflow-y: auto;
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.drawer__navigation__content__component {
+    height: calc(100% - 45px);
     background-color: var(--background-main);
+    overflow-y: auto;
+}
+
+.drawer__navigation__content__app_bar {
+    height: 50px;
 }
