--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -1,19 +1,15 @@
 .drawer_navigation__drawer {
-    position: fixed;
-    z-index: 999;
-    top: 0;
     height: 100%;
     width: 240px;
     display: flex;
     flex-direction: row;
-    transform: translate3d(-240px, 0, 0);
-    transition: transform 250ms;
+    overflow: scroll;
+    background-color: var(--header-and-menu);
 }
 
 .drawer_navigation__drawer__visible {
     height: 100%;
     width: 240px;
-    background-color: var(--header-and-menu);
 }
 
 .drawer_navigation__drawer__visible__menu__icon {
@@ -34,8 +30,9 @@
     position: fixed;
     z-index: 888;
     top: 0;
+    left: 240px;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     background-color: rgba(0,0,0,0.3);
     border: none;
 }
