--- a/src/components/drawer_navigation/styles.css
+++ b/src/components/drawer_navigation/styles.css
@@ -4,3 +4,12 @@
   height: 100%;
   overflow: hidden;
 }
+
+.drawer_navigation__variable_content {
+  width: calc(100% + 240px);
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  overflow: auto;
+  transform: translate3d(-240px, 0, 0);
+}
