--- a/src/views/main/notes/styles.css
+++ b/src/views/main/notes/styles.css
@@ -1,7 +1,7 @@
 .notes {
   position: relative;
   width: 100%;
-  height: calc(100vh - 56px);
+  height: calc(100%);
   display: flex;
   flex-direction: column;
 }
