--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -1,92 +1,92 @@
 .drawer_navigation__drawer {
-    height: 100%;
-    width: 240px;
-    display: flex;
-    flex-direction: row;
-    overflow: scroll;
-    background-color: var(--header-and-menu);
-    margin-left: -240px;
+  height: 100%;
+  width: 240px;
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+  background-color: var(--header-and-menu);
+  margin-left: -240px;
 }
 
 .drawer_navigation__drawer__visible {
-    height: 100%;
-    width: 240px;
+  height: 100%;
+  width: 240px;
 }
 
 .drawer_navigation__drawer__visible__menu__icon {
-    width: 25px;
-    height: 25px;
-    fill: var(--header-and-menu-icons);
+  width: 25px;
+  height: 25px;
+  fill: var(--header-and-menu-icons);
 }
 
 .drawer_navigation__drawer__visible .MuiListItemIcon-root {
-    margin-bottom: 4px;
+  margin-bottom: 4px;
 }
 
-.drawer_navigation__drawer__visible .MuiTypography-root.MuiListItemText-primary {
-    color: var(--menu-font-color);
+.drawer_navigation__drawer__visible
+  .MuiTypography-root.MuiListItemText-primary {
+  color: var(--menu-font-color);
 }
 
 .drawer_navigation__drawer__invisible {
-    position: fixed;
-    z-index: 888;
-    top: 0;
-    left: 0px;
-    height: 100%;
-    width: 100vw;
-    background-color: rgba(0,0,0,0.3);
-    border: none;
+  position: fixed;
+  z-index: 888;
+  top: 0;
+  left: 0px;
+  height: 100%;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: none;
 }
 
 .drawer_navigation__drawer__invisible:focus {
-    outline: 0;
+  outline: 0;
 }
 
 .drawer_navigation__drawer__header {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .drawer_navigation__drawer__header svg {
-    fill: var(--header-and-menu-icons);
+  fill: var(--header-and-menu-icons);
 }
 
 .drawer_navigation__drawer__visible .MuiList-root.MuiList-padding {
-    padding-top: 0px;
-    padding-bottom: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .drawer_navigation__drawer__visible__item_image {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .drawer_navigation__drawer__visible .user {
-    color: var(--menu-font-color);
-    padding: 8px 16px;
+  color: var(--menu-font-color);
+  padding: 8px 16px;
 }
 
 .drawer_navigation__drawer__visible .user .avatar {
-    width: 140px;
-    height: 140px;
+  width: 140px;
+  height: 140px;
 }
 
 .drawer_navigation__drawer__visible .user .username {
-    font-weight: 700;
-    font-size: large;
-    color: inherit;
-    margin-top: 1rem
+  font-weight: 700;
+  font-size: large;
+  color: inherit;
+  margin-top: 1rem;
 }
 
 @media (orientation: landscape) {
-    .drawer_navigation__drawer__visible .user .avatar {
-        width: 100px;
-        height: 100px;
-    }
+  .drawer_navigation__drawer__visible .user .avatar {
+    width: 100px;
+    height: 100px;
+  }
 
-    .drawer_navigation__drawer__visible .user .username {
-        font-size: x-large;
-        color: inherit
-    }
+  .drawer_navigation__drawer__visible .user .username {
+    font-size: x-large;
+    color: inherit;
+  }
 }
-  
