--- a/src/components/button_add/styles.css
+++ b/src/components/button_add/styles.css
@@ -1,5 +1,5 @@
 .button-add.MuiButtonBase-root.MuiFab-root {
-  position: fixed;
+  position: absolute;
   width: 50px;
   height: 50px;
   bottom: 30px;
