--- a/src/views/main/glossary/glossary_item/styles.css
+++ b/src/views/main/glossary/glossary_item/styles.css
@@ -2,6 +2,29 @@
   padding: 10px;
 }
 
-.card-title {
-  margin-bottom: 0rem !important;
+.card__header {
+  padding: 16px 16px 12px;
+}
+
+.card__content {
+  padding: 16px;
+}
+
+.card__header .card__header__title {
+  margin-bottom: 0.2rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.334;
+  letter-spacing: 0em;
+}
+
+.glossary-item .card__typography {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.00938em;
+}
+
+.glossary-item .card__typography.muted {
+  opacity: 0.7;
 }
