--- a/src/views/main/notes/note_create_dialog/styles.css
+++ b/src/views/main/notes/note_create_dialog/styles.css
@@ -4,7 +4,7 @@
 }
 
 .note_create_dialog .MuiDialogTitle-root {
-  background-color: #b32e55;
+  background-color: var(--header-and-menu);
   margin-bottom: 8px;
 }
 
@@ -15,5 +15,5 @@
 
 .note_create_dialog
   .MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
-  color: #b32e55;
+  color: var(--column-font-color);
 }
