--- a/src/Var.css
+++ b/src/Var.css
@@ -27,7 +27,7 @@
   --background-main: #2f2e2c;
   --header-and-menu: #121212;
   --home-icons: #ddce99;
-  --header-and-menu-icons: #2f2e2c;
+  --header-and-menu-icons: #f5f5f5;
   --column-and-selection-background: #796980;
   --note-background: #b4a3ba;
   --note-answer-background: #a692ae;
