--- a/src/views/main/about/styles.css
+++ b/src/views/main/about/styles.css
@@ -1,14 +1,14 @@
-.glossary-item {
+.about-us {
   padding: 10px;
 }
 
 .card__header {
-  padding: 16px 16px 12px;
+  padding: 20px 16px 0px;
   text-align: center;
 }
 
 .card__content {
-  padding: 16px;
+  padding: 12px 16px 16px;
   text-align: justify;
 }
 
@@ -20,13 +20,13 @@
   letter-spacing: 0em;
 }
 
-.glossary-item .card__typography {
+/* .about-us .card__typography {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.00938em;
-}
+} */
 
-.glossary-item .card__typography.muted {
-  opacity: 0.7;
+.about-us .card__typography.muted {
+  opacity: 0.8;
 }
